<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">OpenPilot GCS Home</string>
	<string name="object_browser_name">Browser</string>
	<string name="controller_name">Controller</string>
	<string name="wizard_name">Wizard</string>
	<string name="pfd_name">PFD</string>
	<string name="tfr_name">TFR</string>
	<string name="cc_name">Control Center</string>
    <string name="location_name">Map</string>
	<string name="logger_name">Logging</string>
	
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_connect">Connect</string>
	<string name="menu_item_disconnect">Disconnect</string>
	<string name="menu_item_manage_logs">Manage GCS Logs</string>
	
	<string name="preference_title">Settings</string>
	<string name="preference_checkbox_autoconnect">Automatically Connect</string>
	<string name="preference_checkbox_connection_type">Connection Type</string>
	<string name="preference_checkbox_bluetooth">Bluetooth</string>
	<string name="preference_connection_method_summary">Select the connection method</string>
	<string name="preference_map_type">Select the type of Map to display</string>
	
	<string name="compass_name">Compass</string>
	<string name="cardinal_north">N</string>
	<string name="cardinal_east">E</string>
	<string name="cardinal_south">S</string>
	<string name="cardinal_west">W</string>
	<string name="connected">Connected</string>
	<string name="update_button">Update</string>
	<string name="save_button">Save</string>
	<string name="send_button">Send</string>
	<string name="manual_control_values_">Manual control values:</string>
	<string name="number_of_objects">Number of objects</string>
	<string name="number_of_bytes">Number of bytes</string>
	<string name="alarms">Alarms</string>
	<string name="txrate">TxRate: </string>
	<string name="rxrate">RxRate: </string>
	<string name="latitude">Latitude:</string>
	<string name="longitude">Longitude:</string>
	<string name="altitude">Altitude:</string>
	<string name="tuning">Tuning</string>
	<string name="apply">Apply</string>
	<string name="save">Save</string>
	<string name="settings">Settings</string>
	<string name="data">Data</string>
	<string name="edit">Edit</string>
	<string name="load">Load</string>
	
	<string name="select_file_to_send">Select Log to send: </string>

	<!-- Flight Modes -->
	<string name="positionHold">Position Hold</string>
	<string name="positionVarioFPV">PositionVario FPV</string>
	<string name="positionVarioLOS">PositionVario LOS</string>
	<string name="positionVarioNSEW">PositionVario NSEW</string>
	<string name="returnToBase">Return To Base</string>
	<string name="autoPath">Auto</string>
	<string name="stabilize1">Stabilize 1</string>
	<string name="stabilize2">Stabilize 2</string>
	<string name="stabilize3">Stabilize 3</string>
	<string name="manual">Manual</string>
	<string name="land">Land</string>

	<string name="jump_to_uav">Jump To UAV</string>
	<string name="clear_uav_path">Clear UAV Path</string>
	<string name="clear_NEDuav_path">Clear NED UAV Path</string>
	<string name="clear_tablet_path">Clear Tablet Path</string>
	<string name="set_home">Set Home</string>
	
	<string name="btnApply">Apply</string>
	<string name="btnSave">Save</string>
	<string name="loggerBtnOff">Log Start</string>
	<string name="loggerBtnOn">Log Stop</string>
	<string name="apply_button">Apply</string>
	
	<!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="drawer_open">Open Drawer</string>
	<string name="drawer_close">Closer Drawer</string>

</resources>
