<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/launch_object_browser"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_browser"
                android:text="@string/object_browser_name" />

            <Button
                android:id="@+id/launch_pfd"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_pfd"
                android:text="@string/pfd_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/launch_wizard"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_wizard"
                android:text="@string/wizard_name" />

            <Button
                android:id="@+id/launch_logger"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_logging"
                android:text="@string/logger_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/launch_alarms"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_alarms"
                android:text="@string/alarms" />

            <Button
                android:id="@+id/launch_tuning"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_tuning"
                android:text="@string/tuning" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/launch_location"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_map"
                android:text="@string/location_name" />

            <Button
                android:id="@+id/launch_tfr"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_tfr"
                android:text="@string/tfr_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/launch_cc"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_cc"
                android:text="@string/cc_name" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
